--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -167,7 +167,16 @@ mat-form-field, mat-slide-toggle
     img
         width: 2em
         padding-right: 5px
-.mas-detalles
+.btn-personal
+    display: flex
+    justify-content: center
+    align-items: center
+    height:2em
+    width: 2em
+    border-radius: 50%
     cursor: pointer
-    font-size: 1.2em
     display: block
+    padding: 2px
+.btn-personal:hover
+    color: #ffffff
+    background: #2d47af
