--- a/smart-exchange-frnt/src/app/cliente/mis-operaciones/mis-operaciones.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/mis-operaciones/mis-operaciones.component.sass
@@ -8,6 +8,8 @@
     font-size: 1.5em
     text-align: center
     th
-        font-size: 0.5em !important
+        font-size: 0.55em !important
+        padding: 0px 5px !important
     td
-        font-size: 0.9em !important
+        font-size: 0.85em !important
+        padding: 0px 5px !important
