--- a/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
+++ b/smart-exchange-frnt/src/app/cliente/operacion/operacion.component.sass
@@ -32,3 +32,7 @@
     float: right
 .mat-step-header
     pointer-events: none
+.carga-comprobante
+    width: 80%
+    margin: auto
+    text-align: center
