--- a/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
@@ -36,8 +36,8 @@
             Limpiar filtros
         </button>
     </form>
-    <div class="op-table">
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <div class="mat-elevation-z8">
+        <table mat-table [dataSource]="dataSource" class="">
             <ng-container matColumnDef="fechaCreacion">
                 <th mat-header-cell *matHeaderCellDef> Fecha creación </th>
                 <td mat-cell *matCellDef="let item"> {{item.fechaCreacion | date: 'dd/MM/yyyy HH:mm'}} </td>
@@ -97,6 +97,13 @@
             <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayColumns;"></tr>
           </table>
+          <mat-paginator
+          [showFirstLastButtons]="showFirstLastButtons"
+          [length]="paginaActual.totalElements"
+          [pageSize]="paginaActual.size"
+          [pageSizeOptions]="[5, 10]"
+          [pageIndex]="paginaActual.number">
+          </mat-paginator>
     </div>    
     <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
 </div>
