--- a/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/tipo-cambio/tipo-cambio.component.html
@@ -50,9 +50,13 @@
             <th mat-header-cell *matHeaderCellDef> Tipo </th>
             <td mat-cell *matCellDef="let item"> {{recuperaTipo(item.tipo)}} </td>
           </ng-container>
+          <ng-container matColumnDef="registro">
+            <th mat-header-cell *matHeaderCellDef> Fecha registro</th>
+            <td mat-cell *matCellDef="let item"> {{item.fechaRegistro | date: 'dd/MM/yyyy HH:mm'}}</td>
+          </ng-container>
             <ng-container matColumnDef="fecha">
-              <th mat-header-cell *matHeaderCellDef> Fecha </th>
-              <td mat-cell *matCellDef="let item"> {{item.fecha}} </td>
+              <th mat-header-cell *matHeaderCellDef> Fecha TC</th>
+              <td mat-cell *matCellDef="let item"> {{item.fecha | date: 'dd/MM/yyyy'}} </td>
             </ng-container>
             <ng-container matColumnDef="estado">
               <th mat-header-cell *matHeaderCellDef> Estado </th>
