--- a/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
@@ -14,12 +14,8 @@
             <mat-datepicker #picker2></mat-datepicker>
         </mat-form-field>
         <mat-form-field appearance="outline">
-            <mat-label>Nombres</mat-label>
+            <mat-label>Nombres o RS</mat-label>
             <input matInput type="text" formControlName="nombres">
-        </mat-form-field>
-        <mat-form-field appearance="outline">
-            <mat-label>Paterno</mat-label>
-            <input matInput type="text" formControlName="paterno">
         </mat-form-field>
         <mat-form-field appearance="outline">
             <mat-label>Nro. documento</mat-label>
@@ -28,6 +24,14 @@
         <mat-form-field appearance="outline">
             <mat-label>Ticket</mat-label>
             <input matInput type="text" formControlName="ticket">
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="select-cuenta">
+            <mat-label>Selec. operador</mat-label>
+            <mat-select formControlName="operador">
+                <mat-option *ngFor="let item of operadoresSelect" [value]="item.id">
+                    {{item.usuario}}
+                </mat-option>
+            </mat-select>
         </mat-form-field>
         <button mat-raised-button color="primary" [disabled]="estaCargando">
             Buscar
@@ -47,40 +51,69 @@
             <td mat-cell *matCellDef="let item"> {{item.ticket}} </td>
           </ng-container>
             <ng-container matColumnDef="estado">
-              <th mat-header-cell *matHeaderCellDef> Estado </th>
-              <td mat-cell *matCellDef="let item"> {{item.estado}} </td>
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let item"> {{buscarNombreDeEstado(item.estado)}} </td>
             </ng-container>
             <ng-container matColumnDef="tipoTransferencia">
                 <th mat-header-cell *matHeaderCellDef> Tipo transferencia </th>
-                <td mat-cell *matCellDef="let item"> {{item.tipoTransferencia}} </td>
+                <td mat-cell *matCellDef="let item"> {{buscarNombreDeTransferencia(item.tipoTransferencia)}} </td>
             </ng-container>
             <ng-container matColumnDef="monto">
               <th mat-header-cell *matHeaderCellDef> Monto </th>
-              <td mat-cell *matCellDef="let item">{{item.monto}} </td>
+              <td mat-cell *matCellDef="let item">{{item.monto | number:'1.2-2'}} {{buscarNombreDeMoneda(item.cuentaOrigen.moneda)}}</td>
             </ng-container>
             <ng-container matColumnDef="montoFinal">
               <th mat-header-cell *matHeaderCellDef> Monto final </th>
-              <td mat-cell *matCellDef="let item"> {{item.montoFinal}} </td>
+              <td mat-cell *matCellDef="let item"> {{item.montoFinal | number:'1.2-2'}} {{buscarNombreDeMoneda(item.cuentaDestino.moneda)}}</td>
             </ng-container>
             <ng-container matColumnDef="codigoTransferencia">
                 <th mat-header-cell *matHeaderCellDef> Cód. transferencia </th>
-                <td mat-cell *matCellDef="let item">{{item.codigoTransferencia}}</td>
+                <td mat-cell *matCellDef="let item">
+                    {{item.codigoTransferencia}}
+                    <div (click)="abrirDetalles(1, item.cuentaOrigen)" *ngIf="item.estado!=6" matTooltip="Ver comprobante" class="btn-personal">
+                        <mat-icon>attachment</mat-icon>
+                    </div>
+
+                    <div (click)="abrirDetalles(1, item.cuentaOrigen)" *ngIf="item.estado==6" matTooltip="Ver comprobante" class="btn-personal">
+                        <mat-icon>launch</mat-icon>
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="cliente">
                 <th mat-header-cell *matHeaderCellDef> Cliente </th>
-                <td mat-cell *matCellDef="let item">{{item.cliente.nombres}}</td>
+                <td mat-cell *matCellDef="let item">
+                    {{item.cliente.nombres}}
+                    <div (click)="abrirDetalles(4, item.cliente)" matTooltip="Más detales" class="btn-personal">
+                        <mat-icon>expand_more</mat-icon>
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="origen">
                 <th mat-header-cell *matHeaderCellDef> Cta. Origen </th>
-                <td mat-cell *matCellDef="let item">{{item.cuentaOrigen.bancoNombre}}</td>
+                <td mat-cell *matCellDef="let item">
+                    {{item.cuentaOrigen.bancoNombre}} {{item.cuentaOrigen.numeroCuenta}}
+                    <div (click)="abrirDetalles(1, item.cuentaOrigen)" matTooltip="Más detales" class="btn-personal">
+                        <mat-icon>expand_more</mat-icon>
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="destino">
                 <th mat-header-cell *matHeaderCellDef> Cta. Destino </th>
-                <td mat-cell *matCellDef="let item">{{item.cuentaDestino.bancoNombre}}</td>
+                <td mat-cell *matCellDef="let item">
+                    {{item.cuentaDestino.bancoNombre}} {{item.cuentaDestino.numeroCuenta}}
+                    <div (click)="abrirDetalles(2, item.cuentaDestino)" matTooltip="Más detales" class="btn-personal">
+                        <mat-icon>expand_more</mat-icon>
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="transferencia">
                 <th mat-header-cell *matHeaderCellDef> Cta. Transferencia </th>
-                <td mat-cell *matCellDef="let item">{{item.cuentaTransferencia.bancoNombre}}</td>
+                <td mat-cell *matCellDef="let item">
+                    {{item.cuentaTransferencia.bancoNombre}} {{item.cuentaTransferencia.numeroCuenta}}
+                    <div (click)="abrirDetalles(3, item.cuentaTransferencia)" matTooltip="Más detales" class="btn-personal">
+                        <mat-icon>expand_more</mat-icon>
+                    </div>
+                </td>
             </ng-container>
             <ng-container matColumnDef="operador">
                 <th mat-header-cell *matHeaderCellDef> Asignado </th>
