--- a/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
@@ -70,11 +70,11 @@
                 <th mat-header-cell *matHeaderCellDef> Cód. transferencia </th>
                 <td mat-cell *matCellDef="let item">
                     {{item.codigoTransferencia}}
-                    <div (click)="abrirDetalles(1, item.cuentaOrigen)" *ngIf="item.estado!=6" matTooltip="Ver comprobante" class="btn-personal">
+                    <div (click)="recuperarComprobante(item.id)" *ngIf="item.estado!=6" matTooltip="Ver comprobante" class="btn-personal">
                         <mat-icon>attachment</mat-icon>
                     </div>
 
-                    <div (click)="abrirDetalles(1, item.cuentaOrigen)" *ngIf="item.estado==6" matTooltip="Ver comprobante" class="btn-personal">
+                    <div (click)="cargarComprobante(item.id)" *ngIf="item.estado==6 && recuperaUsuarioToken()==item.operador.usuario" matTooltip="Más detales" class="btn-personal">
                         <mat-icon>launch</mat-icon>
                     </div>
                 </td>
@@ -122,9 +122,23 @@
             <ng-container matColumnDef="opciones">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let item">
-                <button mat-mini-fab [color]="item.validado?'primary':'warn'" matTooltip="Datos validados">
-                    <mat-icon>verified</mat-icon>
-                </button>
+                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                        <mat-icon>more_vert</mat-icon>
+                    </button>
+                        <mat-menu #menu="matMenu">
+                        <button mat-menu-item>
+                            <mat-icon>dialpad</mat-icon>
+                            <span>Redial</span>
+                        </button>
+                        <button mat-menu-item disabled>
+                            <mat-icon>voicemail</mat-icon>
+                            <span>Check voice mail</span>
+                        </button>
+                        <button mat-menu-item>
+                            <mat-icon>notifications_off</mat-icon>
+                            <span>Disable alerts</span>
+                        </button>
+                        </mat-menu>
                 </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayColumns"></tr>
