--- a/smart-exchange-frnt/src/app/app.component.sass
+++ b/smart-exchange-frnt/src/app/app.component.sass
@@ -24,6 +24,12 @@
     left: 0
     padding: 5px
     transition: width 0.3s ease-in-out
+    @media (max-width: 1250px)
+        width: 15%
+    @media (max-width: 700px)
+        width: 20%
+    @media (max-width: 500px)
+        width: 25%
 .whatsapp-logo img
     width: 50%
 .whatsapp-logo:hover
