--- a/smart-exchange-frnt/src/app/cliente/datos-personales/datos-personales.component.html
+++ b/smart-exchange-frnt/src/app/cliente/datos-personales/datos-personales.component.html
@@ -3,7 +3,7 @@
         <span class="cierra-componente accent-color">
             <mat-icon (click)="close(false)" matTooltip="Cerrar">cancel</mat-icon>
         </span>
-      <mat-card-subtitle>Por favor ingresa tus</mat-card-subtitle>
+      <mat-card-subtitle *ngIf="esNuevo">Por favor ingresa tus</mat-card-subtitle>
       <mat-card-title>DATOS PERSONALES</mat-card-title>
     </mat-card-header>
     <form [formGroup]="personalForm" (ngSubmit)="registra()" autocomplete="off">
@@ -44,9 +44,9 @@
                 <mat-label>Celular</mat-label>
                 <input matInput type="text" formControlName="celular">
             </mat-form-field>
-            <mat-slide-toggle formControlName="deAcuerdo" color="primary">Authorizo a LC Exchange a almacenar mis datos personales</mat-slide-toggle>
+            <mat-slide-toggle *ngIf="esNuevo" formControlName="deAcuerdo" color="primary">Authorizo a LC Exchange a almacenar mis datos personales</mat-slide-toggle>
         </mat-card-content>
-        <mat-card-actions>
+        <mat-card-actions *ngIf="esNuevo">
         <button mat-fab extended color="primary" [disabled]="estaCargando || !estaDeAcuerdo()">
             <mat-icon>check</mat-icon>
             Registrar
