--- a/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
+++ b/smart-exchange-frnt/src/app/operaciones/operaciones.component.html
@@ -122,21 +122,29 @@
             <ng-container matColumnDef="opciones">
                 <th mat-header-cell *matHeaderCellDef> </th>
                 <td mat-cell *matCellDef="let item">
-                    <button mat-icon-button [matMenuTriggerFor]="menu" aria-label="Example icon-button with a menu">
+                    <button *ngIf="item.estado!=10" mat-icon-button [matMenuTriggerFor]="menu">
                         <mat-icon>more_vert</mat-icon>
                     </button>
                         <mat-menu #menu="matMenu">
-                        <button mat-menu-item>
-                            <mat-icon>dialpad</mat-icon>
-                            <span>Redial</span>
+                        <button (click)="abreReasignacion(item.id)" mat-menu-item *ngIf="mostrarReasignar(item.estado)">
+                            <mat-icon>sync_alt</mat-icon>
+                            <span>Reasignar operador</span>
                         </button>
-                        <button mat-menu-item disabled>
-                            <mat-icon>voicemail</mat-icon>
-                            <span>Check voice mail</span>
+                        <button (click)="accionOperador(item.id, item.ticket, 3)" mat-menu-item *ngIf="mostrarEnCurso(item.estado) && estaAsignadoATi(item.operador.usuario)">
+                            <mat-icon>check</mat-icon>
+                            <span>En curso</span>
                         </button>
-                        <button mat-menu-item>
-                            <mat-icon>notifications_off</mat-icon>
-                            <span>Disable alerts</span>
+                        <button (click)="accionOperador(item.id,item.ticket, 5)" mat-menu-item *ngIf="mostrarAnular(item.estado)">
+                            <mat-icon>thumb_down</mat-icon>
+                            <span>Anular</span>
+                        </button>
+                        <button (click)="finalizaOperacion(item.id)" mat-menu-item *ngIf="mostrarFinalizar(item.estado) && estaAsignadoATi(item.operador.usuario)">
+                            <mat-icon>done_all</mat-icon>
+                            <span>Finalizar</span>
+                        </button>
+                        <button (click)="accionOperador(item.id,item.ticket, 0)" mat-menu-item *ngIf="mostrarReactivar(item.estado)">
+                            <mat-icon>refresh</mat-icon>
+                            <span>Reactivar</span>
                         </button>
                         </mat-menu>
                 </td>
