--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -105,7 +105,8 @@ mat-form-field, mat-slide-toggle
     height: 100vh
     width: 70%
     margin: auto
-
+    @media (max-width: 1250px)
+        width: 90% !important
 .loging-box
     flex: 1
     display: flex
@@ -124,11 +125,17 @@ mat-form-field, mat-slide-toggle
         display: flex
         justify-content: center
         align-items: center
+        @media (max-width: 700px)
+            width: 80% !important
+        @media (max-width: 500px)
+            width: 90% !important
     .loging-right-box
         background: linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
         border-top-right-radius: 0.5em
         border-bottom-right-radius: 0.5em
         min-height: 100%
+        @media (max-width: 700px)
+            display: none
 
 .loging-formulario
     text-align: center
