--- a/smart-exchange-frnt/src/app/app.component.html
+++ b/smart-exchange-frnt/src/app/app.component.html
@@ -19,3 +19,4 @@
     <div class="color-primary">Chatea con nosotros</div>
 </a>
 <notifier-container></notifier-container>
+<ngx-ui-loader></ngx-ui-loader>
