--- a/smart-exchange-frnt/src/app/ui-utils/prompt/prompt.component.html
+++ b/smart-exchange-frnt/src/app/ui-utils/prompt/prompt.component.html
@@ -6,7 +6,7 @@
         <mat-card-content>
                 <mat-form-field appearance="outline">
                     <mat-label>{{contenido.label}}</mat-label>
-                    <input matInput type="text" formControlName="valor">
+                    <input matInput [type]="tipoInput" formControlName="valor">
                 </mat-form-field>            
         </mat-card-content>
         <mat-card-actions>
