--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -107,6 +107,8 @@ mat-form-field, mat-slide-toggle
     margin: auto
     @media (max-width: 1250px)
         width: 90% !important
+    @media (max-width: 500px)
+        width: 100% !important
 .loging-box
     flex: 1
     display: flex
@@ -118,6 +120,8 @@ mat-form-field, mat-slide-toggle
     -moz-box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
     box-shadow: 0px 0px 21px -2px rgba(0,0,0,0.75)
     height: 80%
+    @media (max-width: 500px)
+        height: 100% !important
     .loging-left-box, .loging-right-box
         padding: 5px
         box-sizing: border-box
@@ -128,7 +132,7 @@ mat-form-field, mat-slide-toggle
         @media (max-width: 700px)
             width: 80% !important
         @media (max-width: 500px)
-            width: 90% !important
+            width: 100% !important
     .loging-right-box
         background: linear-gradient(63deg, rgba(32,181,152,1) 0%, rgba(6,162,201,1) 43%, rgba(1,157,214,1) 100%)
         border-top-right-radius: 0.5em
