--- a/smart-exchange-frnt/src/app/operaciones/operaciones.component.sass
+++ b/smart-exchange-frnt/src/app/operaciones/operaciones.component.sass
@@ -15,3 +15,5 @@
         padding: 0px 5px !important
     mat-form-field
         width: 10em
+        input, mat-label, mat-option, mat-select
+            font-size: 0.8em !important
