--- a/smart-exchange-frnt/src/app/ui-utils/prompt/prompt.component.html
+++ b/smart-exchange-frnt/src/app/ui-utils/prompt/prompt.component.html
@@ -1,25 +1,23 @@
-<div  [@puzzleAnimations]>
-    <mat-card>
-        <mat-card-header>
-            <mat-card-title>{{contenido.texto}}</mat-card-title>
-        </mat-card-header>
-        <form [formGroup]="form" (ngSubmit)="closeWithData()" autocomplete="off">
-            <mat-card-content>
-                    <mat-form-field appearance="outline">
-                        <mat-label>{{contenido.label}}</mat-label>
-                        <input matInput [type]="tipoInput" formControlName="valor">
-                    </mat-form-field>            
-            </mat-card-content>
-            <mat-card-actions>
-                <button mat-fab extended color="primary">
-                    <mat-icon>done</mat-icon>
-                    Aceptar
-                </button>&nbsp;
-                <button (click)="close(false)" type="button" mat-fab extended color="accent">
-                    <mat-icon>block</mat-icon>
-                    Cancelar
-                </button>
-            </mat-card-actions>
-        </form>
-    </mat-card>
-</div>
+<mat-card [@dialogAnimations]>
+    <mat-card-header>
+        <mat-card-title>{{contenido.texto}}</mat-card-title>
+    </mat-card-header>
+    <form [formGroup]="form" (ngSubmit)="closeWithData()" autocomplete="off">
+        <mat-card-content>
+                <mat-form-field appearance="outline">
+                    <mat-label>{{contenido.label}}</mat-label>
+                    <input matInput [type]="tipoInput" formControlName="valor">
+                </mat-form-field>            
+        </mat-card-content>
+        <mat-card-actions>
+            <button mat-fab extended color="primary">
+                <mat-icon>done</mat-icon>
+                Aceptar
+            </button>&nbsp;
+            <button (click)="close(false)" type="button" mat-fab extended color="accent">
+                <mat-icon>block</mat-icon>
+                Cancelar
+            </button>
+        </mat-card-actions>
+    </form>
+</mat-card>
