--- a/smart-exchange-frnt/src/styles.sass
+++ b/smart-exchange-frnt/src/styles.sass
@@ -193,3 +193,22 @@ mat-form-field, mat-slide-toggle
     background: #2d47af
 .copiar
     cursor: pointer
+///colores para estado de operaciones
+.op-est-preliminar, .op-est-activo, .op-est-en-curso, .op-est-anulado, .op-est-finalizado
+    color: #ffffff !important
+    text-transform: uppercase
+    font-size: 0.8em
+    text-align: center
+    border-radius: 9px
+    padding: 0px 5px
+.op-est-preliminar
+    background: #f03535 !important    
+.op-est-activo
+    background: #2d47af !important
+    padding: 0 !important
+.op-est-en-curso
+    background: #47be11 !important
+.op-est-anulado
+    background: #686967 !important
+.op-est-finalizado
+    background: #1f8b4c !important
