--- a/smart-exchange-frnt/src/app/cliente/carga-comprobante/carga-comprobante.component.html
+++ b/smart-exchange-frnt/src/app/cliente/carga-comprobante/carga-comprobante.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-header>
         <mat-card-title>Comprobante</mat-card-title>
-        <mat-card-subtitle>Carga una imagen del comprobante y nuestros operadores lo procesarán</mat-card-subtitle>
+        <mat-card-subtitle *ngIf="!finaliza">Carga una imagen del comprobante y nuestros operadores lo procesarán</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
         <br>
@@ -24,7 +24,7 @@
                     </button>
                 </div>
                 <br>
-                <span>Atenderemos su operación lo más antes posible, tambien puede hacer seguimiento en la sección de <i>Operaciones</i></span>
+                <span  *ngIf="!finaliza">Atenderemos su operación lo más antes posible, tambien puede hacer seguimiento en la sección de <i>Operaciones</i></span>
             </div>
         </form>
     </mat-card-content>
