--- a/smart-exchange-frnt/src/app/cliente/cliente.component.html
+++ b/smart-exchange-frnt/src/app/cliente/cliente.component.html
@@ -32,4 +32,5 @@
             INICIAR OPERACIÓN
         </button>
     </form>
+    <mat-progress-bar *ngIf="estaCargando" mode="indeterminate"></mat-progress-bar>
 </div>
