--- a/smart-exchange-frnt/src/app/principal/principal.component.html
+++ b/smart-exchange-frnt/src/app/principal/principal.component.html
@@ -14,6 +14,7 @@
         <button routerLink="/operaciones/tipo-cambio" mat-button color="primary" class="elemento menu-texto"><b>Tipos de cambio</b></button>
         <button routerLink="/operaciones/cuentas-bancarias" mat-button color="primary" class="elemento menu-texto"><b>Cuentas bancarias</b></button>
         <button routerLink="/operaciones/clientes/todo" mat-button color="primary" class="elemento menu-texto"><b>Clientes</b></button>
+        <button routerLink="/operaciones/empresa" mat-button color="primary" class="elemento menu-texto"><b>Empresa</b></button>
     </span>
     <span class="toolbar-section right">
         <small class="accent-color"><b>{{recuperaUsuario()}}</b> </small>
